# Scout-GPS-Studio

./: .gitignore  99-scout-gps.rules  README.md  index.html  package-lock.json  package.json
installer/: build-installer.sh  install.sh  uninstall.sh
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  gps.rs  lib.rs  main.rs  nmea.rs  test_criteria.rs  test_report.rs  ubx_config.rs  ubx_optimizer.rs
src/components/: ConfigPanel.tsx  DeviceDetection.tsx  HardwareInfo.tsx  LiveDashboard.tsx  MapPanel.tsx  NmeaTraffic.tsx  OptimizePanel.tsx  TestHistory.tsx  TestRunner.tsx
src/hooks/: useTauri.ts
