[package]
name = "scout-gps-test"
version = "1.0.0"
description = "Factory GPS hardware test tool for Scout Tablets"
authors = ["Vortex Navigation"]
edition = "2021"
default-run = "scout-gps-test"

[lib]
name = "scout_gps_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NMEA parsing for GPS data
nmea = "0.6"

# Serial port for GPS hardware
serialport = "4.7"

# Error handling
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time for test reports
chrono = { version = "0.4", features = ["serde"] }
